加上了react-router@v5  还有其缓存修改插件

--- a/src/components/cbListItem/styles/index.less
+++ b/src/components/cbListItem/styles/index.less
@@ -22,5 +22,13 @@
         border-width: 2px;
       }
     }
+    &.not_empty {
+      &:hover {
+        background-color: chartreuse;
+      }
+      &.active {
+        background-color: chartreuse;
+      }
+    }
   }
 }
