--- a/src/pages/cssLayouts/styles/index.less
+++ b/src/pages/cssLayouts/styles/index.less
@@ -1,8 +1,18 @@
 .page_cssLayouts_box {
   // * {
-  //   //布局这里统一用border盒模型吧（width height固定后，padding border会向内挤压content）
+  //   //“border盒”模型（width height固定后，padding border会向内挤压content，而“content盒”则会向外挤）
   //   box-sizing: border-box;
   // }
+  .inner_border_box {
+    * {
+      box-sizing: border-box;
+    }
+  }
+  .inner_content_box {
+    * {
+      box-sizing: content-box;
+    }
+  }
   .bfc_container {
     overflow: hidden;
   }
@@ -27,39 +37,74 @@
   .bg_color_7 {
     background-color: #ccc;
   }
-  // 圣杯布局
+  /* 圣杯布局（margin-left负值方式） */
   .holy_grail_layout {
-    @header_height: 40px;
-    @footer_height: 40px;
-    @main_height: 150px;
-    @left_width: 100px;
+    color: #fff;
+    @left_width: 200px;
     @right_width: 150px;
-    .header {
-      height: @header_height;
-    }
-    .footer {
-      height: @footer_height;
-    }
-    .center {
-      height: @main_height;
+    &.inner_content_box {
+      // content-box情况
+      .header {
+      }
+      .footer {
+        clear: both; //2.隔离后面元素受浮动的影响
+      }
+      .content {
+        padding-left: @left_width; //5.要消重叠，给左栏腾空间（但又把左栏挤到右边）
+        padding-right: @right_width; //8.要消重叠，给右栏腾空间（但又把右栏栏挤到左边）
+        .center {
+          float: left; //1.中间左中右三栏左浮动
+          width: 100%; //3.因浮动而宽度不再默认占满整行了，调整一下
+        }
+        .left {
+          width: @left_width;
 
-      float: left; //1需要先统一浮动起来
-      width: 100%; //2因为浮动后center宽度不再是默认100%了
-      padding-left: @left_width;
-    }
-    .left {
-      height: @main_height;
-      width: @left_width;
+          float: left; //1
+          margin-left: -100%; //4.利用margin负值，使左栏（左边）紧靠上一行最左边（但会与中栏部分重叠）
+          position: relative; //6.利用相对定位使被挤的左栏偏移再回到这行最左边
+          left: -@left_width; //6
+        }
+        .right {
+          width: @right_width;
 
-      float: left; //1
-      margin-left: -100%; //3利用margin-left负值把左右“挪到”两边（但此时left和right还与center的“content”重叠）
+          float: left; //1
+          margin-left: -@right_width; //7.同样利用margin负值，使右栏（右边）紧靠上一行最右边（但会与中栏部分重叠）
+          position: relative; //9.利用相对定位使被挤的右栏偏移再回到这行最右边
+          right: -@right_width; //9
+        }
+      }
     }
-    .right {
-      height: @main_height;
-      width: @right_width;
+    &.inner_border_box {
+      // border-box情况
+      .header {
+      }
+      .footer {
+        clear: both; //2.隔离后面元素受浮动的影响
+      }
+      .content {
+        padding-left: @left_width; //5.要消重叠，给左栏腾空间（但又把左栏挤到右边）
+        padding-right: @right_width; //8.要消重叠，给右栏腾空间（但又把右栏栏挤到左边）
+        .center {
+          float: left; //1.中间左中右三栏左浮动
+          width: 100%; //3.因浮动而宽度不再默认占满整行了，调整一下
+        }
+        .left {
+          width: @left_width;
 
-      float: left; //1
-      margin-left: -@right_width; //3
+          float: left; //1
+          margin-left: -100%; //4.利用margin负值，使左栏紧靠上一行最左边（但会与中栏部分重叠）
+          position: relative; //6.利用相对定位使被挤的左栏偏移再回到这行最左边
+          left: -@left_width; //6
+        }
+        .right {
+          width: @right_width;
+
+          float: left; //1
+          margin-left: -@right_width; //7.同样利用margin负值，使右栏（右边）紧靠上一行最右边（但会与中栏部分重叠）
+          position: relative; //9.利用相对定位使被挤的右栏偏移再回到这行最右边
+          right: -@right_width; //9
+        }
+      }
     }
   }
 }
